...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Show-next-page"
        app:layout_constraintVertical_bias="0.993" />

    <Button
        android:id="@+id/settings_from_random_activity"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="48dp"
...
